--- a/MLA1_SZM.ipynb
+++ b/MLA1_SZM.ipynb
@@ -3,7 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "mount_file_id": "1HqJ4kUpLCO9jFHOT6pmx7HonWGMtBEbR",
+      "authorship_tag": "ABX9TyPjzwLIBMTf7tvwIS3fq0rP",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +17,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Graviton12/MLA_SZM/blob/main/MLA1_SZM.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -39,7 +52,7 @@
       "metadata": {
         "id": "nozUzlk2WZks"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -60,7 +73,7 @@
       "metadata": {
         "id": "daKLe_eoGwWi"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -86,7 +99,7 @@
         "id": "5miqkXw8Uery",
         "outputId": "81ecb28f-3268-4d98-bfe6-e05d868514c7"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -431,7 +444,7 @@
         "outputId": "bb179c8d-0654-498a-ca5f-3619e1c912a8",
         "id": "bkOtp39FXwNG"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -775,7 +788,7 @@
         "id": "HugLATWRX7GF",
         "outputId": "5900b126-b667-4c75-80a6-8aa727e01f9b"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1127,7 +1140,7 @@
         "id": "5PuCfE6LYKmR",
         "outputId": "1a839fe1-2e03-4a81-b455-917802fa102c"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1171,7 +1184,7 @@
         },
         "outputId": "88e704bb-bb77-4bd6-d01f-01908fc76f54"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1661,7 +1674,7 @@
         "id": "nSsejaUpegfc",
         "outputId": "81c30a8b-188c-4154-8b29-16dbee0eac22"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2030,7 +2043,7 @@
         "id": "2XIwDF8NfmOq",
         "outputId": "fba69f1e-7911-429d-990f-fd0c6d71db07"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2535,7 +2548,7 @@
         "id": "I1k18w9uhGGM",
         "outputId": "bf6a17e6-724e-4565-ce18-7aed1d296bff"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3036,7 +3049,7 @@
         "id": "ufTGAwCSiIDW",
         "outputId": "9bfbfdc6-fec9-4864-9ce7-f26c65bfdfdd"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3075,7 +3088,7 @@
         "id": "mvuZ3JgOiqzO",
         "outputId": "cf39e3a7-fec5-46cc-fcef-ed4808f8bea4"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3120,7 +3133,7 @@
         "id": "2t_KvUd3jQEL",
         "outputId": "c37dbbcb-cdf0-48b0-b38d-f0e6ef581c7c"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3174,7 +3187,7 @@
         },
         "outputId": "af744a4b-de90-4890-8512-ffc77d487302"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3682,7 +3695,7 @@
         "id": "QGxQUxrzW3B_",
         "outputId": "14676cfc-3133-43d5-997f-7e0dba9c4fd5"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3840,7 +3853,7 @@
         "id": "Sc1USAeBX4DC",
         "outputId": "132ee4ed-fa77-4d2b-f564-6183f43927e3"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3981,7 +3994,7 @@
         "id": "NKKXPL26mKRS",
         "outputId": "41dfa006-1a55-4a93-f483-290a0cc2d267"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4030,7 +4043,7 @@
         },
         "outputId": "b0a9fac4-0fcb-4990-8c59-82263c7fa671"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4077,7 +4090,7 @@
         "id": "XepAsb3hoB3F",
         "outputId": "610880d9-18bd-42f3-a330-4c049abba256"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
