--- a/MLA2_SZM.ipynb
+++ b/MLA2_SZM.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "mount_file_id": "1_Adb-flKbpzcTwWeRfsvd-LSUgxSpOMI",
-      "authorship_tag": "ABX9TyPqPCL2hsI84Lf8b6TqivDT",
+      "authorship_tag": "ABX9TyPxDGOPeqAKKnpz0VHWfFGO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5084,7 +5084,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Based on the confusion matrix, it can be concluded that our logistic rgerssion model performed perfectly in predicting the week_status given that all classes (weekends and weekdays) were correctly predicted. Meaning, all 1,982 weekends were correctly predicted by the model to be a weekend and all 5,026 weekdays were correctly predicted to be a weekday. This can be supported by our classification report which showed the model was able to accurately predict every class. Additionally, this can be further supported by the AUC score as well as the ROC curve which showed the model predicted week_status perfectly without fase positives or false negatives."
+        "Based on the confusion matrix, it can be concluded that our logistic rgerssion model performed perfectly in predicting the week_status given that all classes (weekends and weekdays) were correctly predicted. Meaning, all 1,982 weekends were correctly predicted by the model to be a weekend and all 5,026 weekdays were correctly predicted to be a weekday. This can be supported by our classification report which showed the model was able to accurately predict every class. Additionally, this can be further supported by the AUC score as well as the ROC curve which showed the model predicted week_status perfectly without false positives or false negatives."
       ],
       "metadata": {
         "id": "5qo5VkpWrGEy"
