--- a/MLA4_SZM.ipynb
+++ b/MLA4_SZM.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNKc0A/KttbjZVCXdZxAPA6",
+      "authorship_tag": "ABX9TyOI3bsrsxuAiNmAE25rVuRw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3197,7 +3197,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Overall, the model seems very suitable for predicting the power usage in kWh given that the root mean squared error of 2.44 x 10^-16 which is approximately 0 for train and a root mean squared error of 1.205 for test, we can conclude that the model was very accurate in predicting the true y values. Though given such a low root mean squared error for the train set, we would need to ensure that the model did not experience overfitting."
+        "Overall, the model seems very suitable for predicting the power usage in kWh given that the root mean squared error of 2.44 x 10^-16 which is approximately 0 for train and a root mean squared error of 1.205 for test. Hence, we can conclude that the model was very accurate in predicting the true y values. Though given such a low root mean squared error for the train set, we would need to ensure that the model did not experience overfitting."
       ],
       "metadata": {
         "id": "G4GXORqE6GMA"
